# upwork-analysis-project

./: .env.example  .gitignore  AGENTS.md  README.md  environment.yml  pyproject.toml  pytest.ini
config/: airtable_schema.json  search_urls.yml  webscrapbook.options.20250808.json
database/: .project
database/.dbeaver/: .project-metadata.json.bak  project-metadata.json  project-settings.json
database/queries/: job_count_by_query.sql
database/schemas/: 03_create_search_results_table.sql
docs/: PROJECT_DOCS.md  blog_post.md  walkthrough.md
notebooks/: exploratory_analysis.ipynb  html_parsing_test.ipynb  sample.jsonl
scripts/: integration_smoketest.py
src/: 02_generate_search_urls.py  cleanup.py  extract_jobs.py  extract_single.py  main.py  open_urls.py  process_jobs.py
src/airtable/: airtable_push.py  push.py  schema.json  sync.py
src/supabase/: push.py  test_connection.py
src/upwork_scraper/: cli.py  config.py  processing.py  scraping.py  utils.py
src/upwork_scraper/connectors/: airtable.py  supabase.py
supabase/.dbeaver/: .project-metadata.json.bak  credentials-config.json  data-sources.json
supabase/schema/: 01_create_scrape_requests_table.sql  02_create_jobs_table.sql  03_create_search_results_table.sql
tests/: test_process_jobs.py
